# microservices

./: README.md  docker.sh
client/pages/customers/: [id].vue
helm/v1/: Chart.yaml  values.yaml
helm/v1/charts/auth/: Chart.yaml  values.yaml
k8s/auth/: deployment.yaml  ingress.yaml  secret.yml  service.yaml
k8s/customer/: deployment.yaml  ingress.yaml  service.yaml
k8s/customers/: config-map.yaml  deployment.yaml  ingress.yaml
k8s/order/: deployment.yaml  service.yaml
k8s/orders/: config-map.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/warehouse/: deployment.yaml  ingress.yaml  service.yaml
k8s/warehouse/db/: email-postgres-service.yaml  warehouse-postgres-claim.yaml  warehouse-postgres-deployment.yaml
k8s/warehouse/secrets/: warehouse.secrets.yaml
k8s_v2/: customer.yaml  orders.yaml  shipments.yaml  warehouse.yaml
k8s_v3/: customer.yaml  orders.yaml  warehouse.yaml
services/Order Service/: Dockerfile  pom.xml
services/auth/: .env  Cargo.toml  Dockerfile  sqlx-data.json
services/auth/migrations/: 20221004165122_added_users.up.sql
services/auth/src/: main.rs  routes.rs
services/auth/src/handlers/: login.rs  me.rs  signup.rs
services/auth/src/models/: user.rs
services/auth/src/routes/: auth.rs
services/auth/src/routes/auth/: login.rs  signup.rs  verify.rs
services/customers/: Dockerfile  pom.xml
services/orders/: Dockerfile  mvnw  pom.xml
services/shipments/: Cargo.toml  Dockerfile
services/shipments/migration/: Cargo.toml
services/shipments/src/: schema.rs
services/warehouse/: Dockerfile  pom.xml
(+64 files in other folders)
