[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
dotenv = "0.15.0"
axum = "0.6.0-rc.2"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
validator = { version = "0.16.0", features = ["derive"] }
